--- a/InsuranceQuoteProject/pom.xml
+++ b/InsuranceQuoteProject/pom.xml
@@ -10,6 +10,10 @@
     <name>A custom project</name>
     <url>http://www.haoxuer.com</url>
 
+<properties>
+<maven.compiler.source>1.8</maven.compiler.source>
+<maven.compiler.target>1.8</maven.compiler.target>
+</properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -22,12 +26,7 @@
     <artifactId>jstl</artifactId>
     <version>1.2</version>
   </dependency>
-<dependency>
-    <groupId>com.oracle.database.jdbc</groupId>
-    <artifactId>ojdbc8</artifactId>
-    <version>19.7.0.0</version>
-    <scope>runtime</scope>
-</dependency>
+
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-core</artifactId>
