--- a/InsuranceQuoteProject/.classpath
+++ b/InsuranceQuoteProject/.classpath
@@ -28,8 +28,11 @@
 	<classpathentry kind="lib" path="C:/Users/Murali/Downloads/ojdbc6.jar/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Murali/eclipse-workspace/PLPfinalWARfile/WebContent/WEB-INF/lib/jwebunit-core-3.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
